IIITBCode_SourceCode/nisarg20/1/usererror.txt
nisarg20/1/userprogram.cpp: In function ‘bool kLengthApart(std::vector<int>&, int)’:
nisarg20/1/userprogram.cpp:8:9: error: expected ‘,’ or ‘;’ before ‘for’
         for(int i=0;i<nums.size();i++)
         ^~~
nisarg20/1/userprogram.cpp:8:21: error: ‘i’ was not declared in this scope
         for(int i=0;i<nums.size();i++)
                     ^
